// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea snapshots renders a basic input with label 1`] = `
<span
  className=""
  style={undefined}
>
  <label
    className="sc-bwzfXH btAPK"
  >
    Some input
  </label>
  <textarea
    className="sc-bdVaJa hvQvfd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Some input"
    rows={4}
    value=""
  />
</span>
`;

exports[`Textarea snapshots renders a basic input with placeholder 1`] = `
<span
  className=""
  style={undefined}
>
  <textarea
    className="sc-bdVaJa hvQvfd"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Some input"
    rows={4}
    value=""
  />
</span>
`;
